Add orderBy whitelist support